--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -8,3 +8,9 @@ refresh_compile_commands(
         "//test/...": "",
     },
 )
+
+cc_test(
+    name = "iterator_test",
+    srcs = ["iterator_test.cc"],
+    linkstatic = True,
+)
