--- a/waymax.cpp/BUILD.bazel
+++ b/waymax.cpp/BUILD.bazel
@@ -6,5 +6,7 @@ cc_library(
     deps = [
         "//waymax.cpp/geometry",
         "@abseil-cpp//absl/types:span",
+        "@stb//:stb_image",
+        "@stb//:stb_image_write",
     ],
 )
