support building aabb

--- a/waymax.cpp/geometry/BUILD.bazel
+++ b/waymax.cpp/geometry/BUILD.bazel
@@ -9,6 +9,7 @@ cc_library(
         "matrix.h",
     ],
     visibility = ["//visibility:public"],
+    deps = ["@abseil-cpp//absl/types:span"],
 )
 
 cuda_library(
